# rag-system

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rag_app/: config.py  index.py  ingest.py  main.py  manifest.py
src/rag_system/: index.py  ingest.py  main.py  persist.py  retrieve.py
tests/: test_generate.py  test_index.py  test_ingest.py  test_main_logic.py  test_manifest.py  test_persist.py  test_retrieve.py
